force-app/main/default/objects/Round_Robin_Assignment__c/Round_Robin_Assignment__c.object-meta.xml
<CustomObject>
    <label>Round Robin Assignment</label>
    <nameField>
        <label>Round Robin Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Round Robin Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>