force-app/main/default/objects/Round_Robin_Assignment__c/fields/Assignment_Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Rule_Type__c</fullName>
    <label>Assignment Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>And</fullName>
            </value>
            <value>
                <fullName>Or</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>