force-app/main/default/objects/Round_Robin_Assignment__c/fields/Custom_Assignment_Rule_Order__c.field-meta.xml
<CustomField>
    <fullName>Custom_Assignment_Rule_Order__c</fullName>
    <label>Custom Assignment Rule Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>