force-app/main/default/objects/Round_Robin_Assignment__c/fields/For_Object__c.field-meta.xml
<CustomField>
    <fullName>For_Object__c</fullName>
    <label>For Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>