force-app/main/default/objects/Round_Robin_Assignment__c/fields/Last_Assignee_Index__c.field-meta.xml
<CustomField>
    <fullName>Last_Assignee_Index__c</fullName>
    <label>Last Assignee Index</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>